corrected contact button spacing

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -89,7 +89,6 @@
 	}
 
 	.submitButton {
-		margin-top: 2.2rem;
 		margin-right: 14rem;
 		background: none;
 		border: 1px solid var(--font-color);
